# funfem

./: .gitignore  Algebra.hs  Elements.hs  Geometry.hs  Gmsh.hs  Input.hs  LICENCE  LICENSE  Main.hs  Makefile  README  README.md  Setup.hs  Solver.hs  Vector.hs  funfem.cabal  square.msh  test.json  test.msh
Numeric/: Funfem.hs
Numeric/Funfem/: Algebra.hs  Algorithms.hs  Assembly.hs  BoundaryConditions.hs  Elements.hs  Hydraulics.hs  Input.hs  Matrix.hs  Mesh.hs  Phenomena.hs  RightHandSide.hs  ShapeFunctions.hs  Solver.hs  Stiffnesses.hs  Vector.hs
Numeric/Funfem/Algebra/: Matrix.hs  Polynomials.hs  Solver.hs  Tensor.hs  Vector.hs
Numeric/Funfem/Algebra/Solver/: CG.hs  LU.hs
Numeric/Funfem/Examples/: Thermal.hs  Thermal1D  Thermal1D.hs  hydraulics.json  hydraulics.lhs  read-input.lhs  solver.lhs
example/: ex1.hs  read-input.hs  read-input.json
tests/: QC.hs  solver.lhs  tests.hs  unittests.hs
