Name:               funfem
Version:            0.0.1
Synopsis:           FEM library
Description:
    The Finite Element Method (FEM) is a numerical approach for solving concrete physical problems by dividing the studied domain into elements in which the equations describing the problem can be solved.
    .
    This library provides usual tools for FEM: elements, solver, etc. It is still under heavy construction.
Category:           Numeric
Stability:          experimental       
License:            BSD3
License-file:       LICENSE
Author:             Adrien Haxaire
Maintainer:         Adrien Haxaire <adrien@funfem.org>
Copyright:          (c) 2012 Adrien Haxaire
Build-Type:         Simple
cabal-version:      >= 1.2.0
library
  build-depends:   
                   base == 4.*,
                   vector >= 0.9.1,
                   containers >= 0.4.0.0

  exposed-modules: 
                   Numeric.Funfem,
                   Numeric.Funfem.Algebra,
                   Numeric.Funfem.Elements
                   Numeric.Funfem.Assembly

  ghc-options:     -Wall -O2
