Name:               funfem
Version:            0.0.1
Synopsis:           Finite Elements Method (FEM) library
Description:
    The Finite Element Method (FEM) is a numerical approach for solving concrete physical problems by dividing the studied domain into elements in which the equations describing the problem can be solved.
    .
    This library provides usual tools for FEM: elements, solver, etc. It is still under heavy construction.
Homepage:           http://www.funfem.org
Category:           Numeric
Stability:          experimental       
License:            BSD3
License-file:       LICENSE
Author:             Adrien Haxaire
Maintainer:         Adrien Haxaire <adrien@funfem.org>
Copyright:          (c) 2011-2012 Adrien Haxaire
tested-with:        GHC == 7.4.1
Build-Type:         Simple
cabal-version:      >= 1.6.0
library
  build-depends:   
                   base >= 4 && < 5,
                   vector >= 0.9.1,
                   containers >= 0.4.0.0

  exposed-modules: 
                   Numeric.Funfem,
                   Numeric.Funfem.Algebra,
                   Numeric.Funfem.Algebra.Vector,
                   Numeric.Funfem.Algebra.Matrix,
                   Numeric.Funfem.Algebra.Polynomials,
                   Numeric.Funfem.Algebra.Solver,
                   Numeric.Funfem.Algebra.Solver.LU,
                   Numeric.Funfem.Algebra.Solver.CG,
                   Numeric.Funfem.Elements,
                   Numeric.Funfem.Assembly

  ghc-options:     -Wall 

source-repository head
  type:     darcs
  location: http://code.funfem.org/funfem

source-repository head
  type:     git
  location: git://github.com/adrienhaxaire/funfem.git